crates/oxc_linter/src/snapshots/scope.snap
---
source: crates/oxc_linter/src/tester.rs
expression: scope
---
  ⚠ eslint-plugin-jsx-a11y(scope): The scope prop can only be used on <th> elements
   ╭─[scope.tsx:1:1]
 1 │ <div scope />
   ·      ─────
   ╰────
  help: Must use scope prop only on <th> elements


